--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,3 +30,8 @@
   {{ printf `<link href="%s" rel="%s" type="%s" title="%s" />` .Permalink .Rel .MediaType.Type $.Site.Title | safeHTML }}
 {{ end }}
 {{ template "_internal/google_analytics.html" . }}
+
+{{ with .Site.Title }}<meta property="og:title" content="{{ . }}">{{ end }}
+{{ with .Site.Params.description }}<meta property="og:description" content="{{ . }}">{{ end }}
+{{ with .Site.BaseURL }}<meta property="og:url" content="{{ . }}">{{ end }}
+<meta property="og:image" content="{{ .Site.BaseURL }}img/my_linkedin.jpeg">
