--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,3 +36,4 @@
 {{ with .Site.Params.description }}<meta property="og:description" content="{{ . }}">{{ end }}
 {{ with .Site.BaseURL }}<meta property="og:url" content="{{ . }}">{{ end }}
 <meta property="og:image" content="{{ .Site.BaseURL }}img/my_linkedin.jpeg">
+<meta property="og:type" content="website">
